- papildināta validācija kontēšanai + visskas