@@ -8,19 +8,22 @@ import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.function.Consumer;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.ApplicationContextAware;
 import org.springframework.stereotype.Component;
 
-import jakarta.validation.constraints.NotNull;
 import javafx.beans.property.SimpleStringProperty;
-import javafx.beans.value.ObservableValue;
 import javafx.collections.ObservableList;
 import javafx.geometry.Pos;
 import javafx.scene.control.ContextMenu;
@@ -57,6 +60,7 @@ public class DynamicTableView<T> extends TableView<T> implements ApplicationCont
 	private static final int MIN_ACCOUNT_CODE_SEARCH_SYMBOL_COUNT = 1;
 	private static final double COLUMN_MIN_WIDTH = 150;
 	private static ApplicationContext applicationContext;
+	protected Map<Predicate<DynamicTableView<?>>, String> validationConditions = new HashMap<>();
 	private Class<T> type;
 	private Creator<T> creator;
 	private Updater<T> updater;
@@ -64,6 +68,7 @@ public class DynamicTableView<T> extends TableView<T> implements ApplicationCont
 	private Saver<T> saver;
 	private ContextMenu activeContextMenu;
 	private InlineEditManager<T> inlineEditManager;
+	private boolean isValid = true;
 
 	public DynamicTableView() {
 		this.inlineEditManager = new InlineEditManager<>(this);
@@ -71,7 +76,9 @@ public class DynamicTableView<T> extends TableView<T> implements ApplicationCont
 		this.setOnMouseClicked(event -> {
 			if (event.getClickCount() == 2) {
 				T item = this.getSelectionModel().getSelectedItem();
-				updater.update(item);
+				if (item != null) {
+					updater.update(item);
+				}
 			}
 		});
 		this.addEventHandler(MouseEvent.MOUSE_CLICKED, this::handleRightClick);
@@ -82,9 +89,16 @@ public class DynamicTableView<T> extends TableView<T> implements ApplicationCont
 		applicationContext = context;
 	}
 
+	public void addValidationControl(Predicate<DynamicTableView<?>> validationCondition, String errorMessage) {
+		validationConditions.put(validationCondition, errorMessage);
+	}
+
+	public void clearValidationControls() {
+		validationConditions.clear();
+	}
+
 	public void setData(List<T> data) {
-		boolean dataIsEmpty = data.isEmpty();
-		if (dataIsEmpty) {
+		if (data == null || data.isEmpty()) {
 			if (type == null) {
 				throw new IllegalStateException("Type is null. You must pass a Class<T> object to the DynamicTableView constructor.");
 			}
@@ -103,28 +117,29 @@ public class DynamicTableView<T> extends TableView<T> implements ApplicationCont
 			Field[] fields = firstObject.getClass().getDeclaredFields();
 
 			List<Field> fieldList = Arrays.stream(fields).filter(field -> field.getAnnotation(TableViewInfo.class) != null)
-					.sorted(Comparator.comparingInt(field -> field.getAnnotation(TableViewInfo.class).columnOrder())).toList();
+					.sorted(Comparator.comparingInt(field -> field.getAnnotation(TableViewInfo.class).columnOrder()))
+					.collect(Collectors.toList());
 
 			fieldList.forEach(field -> {
-				TableViewInfo tableViewInfoAnotation = field.getAnnotation(TableViewInfo.class);
-				String columnDisplayName = (tableViewInfoAnotation != null) ? tableViewInfoAnotation.displayName() : field.getName();
-				String methodName = getNestedPropertyMethodName(tableViewInfoAnotation);
+				TableViewInfo tableViewInfoAnnotation = field.getAnnotation(TableViewInfo.class);
+				String columnDisplayName = tableViewInfoAnnotation != null ? tableViewInfoAnnotation.displayName() : field.getName();
+				String methodName = getNestedPropertyMethodName(tableViewInfoAnnotation);
 
-				TableColumn<T, ?> column = tableViewInfoAnotation != null && tableViewInfoAnotation.useAsSearchComboBox() ?
+				TableColumn<T, ?> column = tableViewInfoAnnotation != null && tableViewInfoAnnotation.useAsSearchComboBox() ?
 						buildSearchableComboBoxColumn(columnDisplayName, field) :
 						buildColumn(columnDisplayName, field, methodName);
 
-				if (tableViewInfoAnotation != null && tableViewInfoAnotation.editable()) {
+				if (tableViewInfoAnnotation != null && tableViewInfoAnnotation.editable()) {
 					column.setEditable(true);
-					if (!tableViewInfoAnotation.useAsSearchComboBox()) {
+					if (!tableViewInfoAnnotation.useAsSearchComboBox()) {
 						inlineEditManager.setupEditableColumn(column, field, saver, updater);
 					}
 				}
 
-				if (tableViewInfoAnotation.columnWidth() != 0) {
-					column.setMinWidth(tableViewInfoAnotation.columnWidth());
+				if (tableViewInfoAnnotation != null && tableViewInfoAnnotation.columnWidth() != 0) {
+					column.setMinWidth(tableViewInfoAnnotation.columnWidth());
 				} else {
-					column.setMaxWidth(COLUMN_MIN_WIDTH);
+					column.setMinWidth(COLUMN_MIN_WIDTH);
 				}
 				getColumns().add(column);
 			});
@@ -132,23 +147,18 @@ public class DynamicTableView<T> extends TableView<T> implements ApplicationCont
 		} catch (RuntimeException e) {
 			throw new DynamicTableBuildException(e.getMessage() + SPACE + e.getCause());
 		}
-		if (!dataIsEmpty) {
-			setItems((ObservableList<T>) data);
-		}
+
+		setItems((ObservableList<T>) data);
 	}
 
 	private String getNestedPropertyMethodName(TableViewInfo annotation) {
-		return annotation !=null && annotation.nestedPropertyMethod().isEmpty() ? "toString" : annotation.nestedPropertyMethod();
+		return annotation != null && !annotation.nestedPropertyMethod().isEmpty() ? annotation.nestedPropertyMethod() : "toString";
 	}
 
-	private <T, U, S> TableColumn<T, ?> buildColumn(String columnDisplayName, Field field, String getMethodName) {
-		TableColumn<T, ?> column;
-		if (isFieldFromPackage(field)) {
-			column = createRelatedObjectsColumn(columnDisplayName, field, getMethodName);
-		} else {
-			column = createColumn(columnDisplayName, field);
-		}
-		return column;
+	private <T, S> TableColumn<T, ?> buildColumn(String columnDisplayName, Field field, String getMethodName) {
+		return isFieldFromPackage(field) ?
+				createRelatedObjectsColumn(columnDisplayName, field, getMethodName) :
+				createColumn(columnDisplayName, field);
 	}
 
 	private TableColumn<T, ?> buildSearchableComboBoxColumn(String columnDisplayName, Field field) {
@@ -174,51 +184,20 @@ public class DynamicTableView<T> extends TableView<T> implements ApplicationCont
 				@Override
 				protected void updateItem(T item, boolean empty) {
 					super.updateItem(item, empty);
-					if (empty) {
-						setGraphic(null);
-					} else {
+					setGraphic(empty ? null : comboBox);
+					if (!empty) {
 						comboBox.setValue(item);
-						setGraphic(comboBox);
 					}
 				}
 			};
 			cell.setAlignment(Pos.CENTER);
-
-			if (field.getAnnotation(NotNull.class) != null) {
-				comboBox.valueProperty().addListener((obs, oldVal, newVal) -> {
-					if (cell.getTableRow() != null && cell.getTableRow().getItem() != null) {
-						try {
-							if (newVal != null) {
-								field.setAccessible(true);
-								field.set(cell.getTableRow().getItem(), newVal);
-								cell.setStyle("");
-							} else {
-								System.out.println("Vērtība ir obligāta un nevar būt tukša.");
-								cell.setStyle("-fx-background-color: red;");
-							}
-						} catch (IllegalAccessException e) {
-							log.error(e.toString());
-						}
-					}
-				});
-			}
 
 			comboBox.valueProperty().addListener((obs, oldVal, newVal) -> {
 				if (cell.getTableRow() != null && cell.getTableRow().getItem() != null) {
 					try {
 						field.setAccessible(true);
 						field.set(cell.getTableRow().getItem(), newVal);
-					} catch (IllegalAccessException e) {
-						log.error(e.toString());
-					}
-				}
-			});
-
-			comboBox.setOnAction(event -> {
-				if (cell.getTableRow() != null && cell.getTableRow().getItem() != null) {
-					try {
-						field.setAccessible(true);
-						field.set(cell.getTableRow().getItem(), comboBox.getValue());
+						cell.setStyle(newVal != null ? "" : "-fx-background-color: red;");
 					} catch (IllegalAccessException e) {
 						log.error(e.toString());
 					}
@@ -233,8 +212,7 @@ public class DynamicTableView<T> extends TableView<T> implements ApplicationCont
 
 	private Object getDataService(Field field) {
 		TableViewInfo tableViewInfo = field.getAnnotation(TableViewInfo.class);
-		Class<?> serviceClass = tableViewInfo.searchServiceClass();
-		return applicationContext.getBean(serviceClass);
+		return applicationContext.getBean(tableViewInfo.searchServiceClass());
 	}
 
 	private <T> TableColumn<T, String> createRelatedObjectsColumn(String propertyName, Field field, String methodName) {
@@ -247,49 +225,37 @@ public class DynamicTableView<T> extends TableView<T> implements ApplicationCont
 					Method method = value.getClass().getMethod(methodName);
 					Object nestedProperty = method.invoke(value);
 					return new SimpleStringProperty(nestedProperty != null ? nestedProperty.toString() : "");
-				} else {
-					return new SimpleStringProperty("");
 				}
 			} catch (Exception e) {
 				log.error(e.toString());
-				return new SimpleStringProperty("");
 			}
+			return new SimpleStringProperty("");
 		});
 		return column;
 	}
 
 	private <T, S> TableColumn<T, S> createColumn(String propertyName, Field field) {
 		TableColumn<T, S> column = new TableColumn<>(propertyName);
-		column.setCellValueFactory(param -> {
-			field.setAccessible(true);
-			return (ObservableValue<S>) new PropertyValueFactory<T, S>(field.getName());
-		});
 		column.setCellValueFactory(new PropertyValueFactory<>(field.getName()));
-		column.setCellFactory(col -> {
-			TextFieldTableCell<T, S> cell = new TextFieldTableCell<>(new StringConverter<>() {
-				@Override
-				public String toString(Object object) {
-					return object != null ? object.toString() : "";
+		column.setCellFactory(col -> new TextFieldTableCell<>(new StringConverter<>() {
+			@Override
+			public String toString(Object object) {
+				return object != null ? object.toString() : "";
+			}
+
+			@Override
+			public S fromString(String string) {
+				try {
+					Constructor<?> constructor = field.getType().getConstructor(String.class);
+					return (S) constructor.newInstance(string);
+				} catch (NoSuchMethodException | IllegalAccessException | InstantiationException | InvocationTargetException e) {
+					log.error(e.toString());
+					return null;
 				}
-
-				@Override
-				public S fromString(String string) {
-					try {
-						Constructor<?> constructor = field.getType().getConstructor(String.class);
-						return (S) constructor.newInstance(string);
-					} catch (NoSuchMethodException | IllegalAccessException | InstantiationException | InvocationTargetException e) {
-						log.error(e.toString());
-						return null;
-					}
-				}
-			});
-			return cell;
-		});
-
-
+			}
+		}));
 		return column;
 	}
-
 
 	private void handleRightClick(MouseEvent event) {
 		if (event.getButton() == MouseButton.SECONDARY) {
@@ -300,16 +266,12 @@ public class DynamicTableView<T> extends TableView<T> implements ApplicationCont
 				}
 				ContextMenu contextMenu = new ContextMenu();
 				activeContextMenu = contextMenu;
-				List<Pair<String, Consumer<T>>> actions = new ArrayList<>();
-
-				actions.add(new Pair<>("Jauns", item -> creator.create(item)));
-				actions.add(new Pair<>("Labot", item -> {
+				List<Pair<String, Consumer<T>>> actions = List.of(new Pair<>("Jauns", creator::create), new Pair<>("Labot", item -> {
 					updater.update(item);
 					int index = getItems().indexOf(item);
 					getSelectionModel().select(index);
 					scrollTo(index);
-				}));
-				actions.add(new Pair<>("Dzēst", item -> {
+				}), new Pair<>("Dzēst", item -> {
 					if (AlertResponseType.NO.equals(new AlertAsk(DELETE_QUESTION_HEADER_TEXT, DELETE_QUESTION_CONTEXT_TEXT).getAnswer())) {
 						return;
 					}
@@ -333,8 +295,40 @@ public class DynamicTableView<T> extends TableView<T> implements ApplicationCont
 	}
 
 	private boolean isFieldFromPackage(Field field) {
-		Class<?> fieldType = field.getType();
-		String fieldPackageName = fieldType.getPackageName();
-		return fieldPackageName.startsWith("lv.degra.accounting");
+		return field.getType().getPackageName().startsWith("lv.degra.accounting");
 	}
+
+	public boolean validate() {
+		isValid = validationConditions.entrySet().stream().allMatch(entry -> {
+			boolean valid = entry.getKey().test(this);
+			if (!valid) {
+				log.error("Validation failed: {}", entry.getValue());
+			}
+			return valid;
+		});
+		updateValidationStyle();
+		return isValid;
+	}
+
+	private void updateValidationStyle() {
+		this.setStyle(isValid ? "" : "-fx-border-color: red; -fx-border-width: 2;");
+	}
+
+	public BigDecimal getColumnSum(String fieldName) {
+		BigDecimal sum = BigDecimal.ZERO;
+		try {
+			Field field = type.getDeclaredField(fieldName);
+			field.setAccessible(true);
+			for (T item : getItems()) {
+				Object value = field.get(item);
+				if (value instanceof Number) {
+					sum = sum.add(BigDecimal.valueOf(((Number) value).doubleValue()));
+				}
+			}
+		} catch (NoSuchFieldException | IllegalAccessException e) {
+			log.error("Error calculating column sum: {}", e.getMessage());
+		}
+		return sum;
+	}
+
 }
